src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationBoolAssignString.deca
//Description :
//	affectation d'un string à une variable définie comme boolean
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	boolean x;
	x = "Hello";
	println(x);
}